--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,19 @@
-== README
+Blog App
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+-Articles
+  -ID
+  -Title
+  -Body
 
-Things you may want to cover:
+-Users
+  -ID
+  -Email
+  -Password
 
-* Ruby version
+-Comments
+  -ID
+  -Body
+  -User_ID
+  -Article_ID
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+  
